--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>Everday Things software</title>
+  <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg">
+  <link rel="icon" type="image/png" href="assets/favicon/favicon.png">
   <style>
     :root {
       --dark-blue: #0081CD;
@@ -39,9 +41,9 @@
     </div>
   </nav>
 
-  <section style="display: flex; flex-direction:column; justify-content: center; align-items: start; padding: 5%;">
+  <section style="display: flex; flex-direction:column; justify-content: center; align-items: start; padding: 5% 10%;">
     <h1>Software doesn't need to <span
-        style="background: linear-gradient(90deg,var(--dark-blue),var(--light-blue)); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">suck</span>.
+        style="background: linear-gradient(45deg,var(--light-blue),var(--dark-blue)); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">suck</span>.
     </h1>
     <p>
       We're carving out our little section of the world, one with well-designed software that cares about how people use
